# VitteLight

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile  tree.sh  vitte-cli-macos-arm64  vitte-cli-macos-x86_64  vittelight.pc.in
.github/: FUNDING.yml
Formula/: vitte-light.rb
build-cmake/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt  vitlc  vitte-cli  vittelight.pc  vl_test
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  vitlc  vitte-cli
build-debug/CMakeFiles 2/vitlc.dir/: build.make  link.txt
build-debug/CMakeFiles 2/vitlc.dir/compiler/: vitlc.c.o.d
build-debug/CMakeFiles 2/vitte-cli.dir/core/: code.c.o.d
build-debug/CMakeFiles 2/vittelight.dir/core/: lex.c.o.d  object.c.o.d  opcodes.c.o.d  tm.c.o.d  types.c.o.d  undump.c.o.d  utf8.c.o.d  vl_compat.c.o.d
build-x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
compiler/: vitl.c  vitlc 2.c  vitlc.c
core/: api.c  api.h  arena.c  arena.h  attrs.c  attrs.h  bitset.c  bitset.h  builtins.c  builtins.h  bytes.c  bytes.h  code.c  code.h  config.c  config.h  ctype.c  ctype.h  debug.c  debug.h  dl.c  dl.h  do.c  do.h  dump.c  endian.c  endian.h  error.c  error.h  fs.c  fs.h  func.c  func.h  gc.c  gc.h  hash.c  hash.h  hashmap.c  hashmap.h  io.c  (+59 more)
docs/: arborescence.md  doc.html  doc.md  index 2.html  index.html  robot.txt  sitemap 2.xml
docs/css/: style.css
docs/js/: script.js
includes/: auxlib.h  conf.h  lib.h
interpreter/: vitli.c
libraries/: amqp.c  archive.c  audio.c  auxlib.c  baselib.c  cbor.c  codec 2.c  config.c  corolib.c  crypto.c  csv.c  curl.c  dblib.c  dl 2.c  dl.c  ffi.c  ffmpeg.c  font.c  fs.c  fswatch.c  hash.c  http.c  img.c  init.c  iolib.c  ioloop.c  ipc.c  json.c  kafka.c  kv.c  libc.c  libctype.h  libm.c  loadlib.c  log.c  ltablib.c  mathlib.c  metrics.c  mgpack.c  mqtt 2.c  (+29 more)
tests/: test 2.c
